test_cae_plan_c2912_2.txt
[WebServer] INFO:     Started server process [11520]
[WebServer] INFO:     Waiting for application startup.
[WebServer] Using data dir: D:\Proyectos_Cursor\CometLocal\data
[WebServer] [job_queue] Cargados 18 jobs desde disco
[WebServer] [job_queue] Worker iniciado
[WebServer] Config paths: org=D:\Proyectos_Cursor\CometLocal\data\refs\org.json people=D:\Proyectos_Cursor\CometLocal\data\refs\people.json platforms=D:\Proyectos_Cursor\CometLocal\data\refs\platforms.json secrets=D:\Proyectos_Cursor\CometLocal\data\refs\secrets.json documents=D:\Proyectos_Cursor\CometLocal\data\refs\documents.json
[WebServer] Using existing LLM config: D:\Proyectos_Cursor\CometLocal\backend\..\data\refs\llm_config.json
[WebServer] INFO:     Application startup complete.
[WebServer] INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)
[WebServer] INFO:     127.0.0.1:53290 - "GET /api/health HTTP/1.1" 200 OK

Running 4 tests using 1 worker

(node:3820) Warning: The 'NO_COLOR' env is ignored due to the 'FORCE_COLOR' env being set.
(Use `node --trace-warnings ...` to show where the warning was created)
(node:3820) Warning: The 'NO_COLOR' env is ignored due to the 'FORCE_COLOR' env being set.
(Use `node --trace-warnings ...` to show where the warning was created)
[WebServer] INFO:     127.0.0.1:53292 - "GET /api/health HTTP/1.1" 200 OK
[E2E] Server health OK - patch: v1.1.1, build_id: undefined
  x  1 tests\cae_plan_e2e.spec.js:51:5 ÔÇ║ CAE Plan E2E - Preparar env├¡o CAE (filtrado) ÔÇ║ Test 1: Abre modal de CAE plan desde tab Pendientes (0ms)
  -  2 tests\cae_plan_e2e.spec.js:96:5 ÔÇ║ CAE Plan E2E - Preparar env├¡o CAE (filtrado) ÔÇ║ Test 2: Genera plan con scope m├¡nimo
  -  3 tests\cae_plan_e2e.spec.js:204:5 ÔÇ║ CAE Plan E2E - Preparar env├¡o CAE (filtrado) ÔÇ║ Test 3: Verifica que decision y reasons son visibles
  -  4 tests\cae_plan_e2e.spec.js:261:5 ÔÇ║ CAE Plan E2E - Preparar env├¡o CAE (filtrado) ÔÇ║ Test 4: Cierra modal correctamente


  1) tests\cae_plan_e2e.spec.js:51:5 ÔÇ║ CAE Plan E2E - Preparar env├¡o CAE (filtrado) ÔÇ║ Test 1: Abre modal de CAE plan desde tab Pendientes 

    SyntaxError: D:\Proyectos_Cursor\CometLocal\tests\helpers\e2eSeed.js: Unexpected token (478:0)

      476 | };
      477 |
    > 478 |
          | ^

      38 |     test.beforeAll(async ({ request }) => {
      39 |         // Reset y seed b├ísico usando request (no page)
    > 40 |         const { seedReset, seedBasicRepository } = require('./helpers/e2eSeed');
         |                                                    ^
      41 |         await seedReset({ request });
      42 |         seedData = await seedBasicRepository({ request });
      43 |     });
        at D:\Proyectos_Cursor\CometLocal\tests\cae_plan_e2e.spec.js:40:52

  1 failed
    tests\cae_plan_e2e.spec.js:51:5 ÔÇ║ CAE Plan E2E - Preparar env├¡o CAE (filtrado) ÔÇ║ Test 1: Abre modal de CAE plan desde tab Pendientes 
  3 did not run
